# mitimidi-relay

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  README.md  btstack_config.h  build.sh  lwipopts.h  main.c  midimiti.gatt  tusb_config.h
